adding feature unsichtbar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<li><a href="./shop/">Buchshop</a></li>
 		<li><a href="./shop/admin/">Verwaltung</a></li>
 		<li class="hover toggleblock">
-			<input id="exercises-cb" name="exercises-cb" type="checkbox">
+			<input id="exercises-cb" name="exercises-cb" type="checkbox" class="unsichtbar">
 			<label for="exercises-cb">&Uuml;bungen</label>
 			<ul class="toggleitem">
 				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub12/U1_tcpipftp_vw.pdf" title="Netzwerküberwachung und -analyse">1</a></li>
@@ -99,7 +99,7 @@ Es wäre ja gelacht, wenn das nicht geht...
 	<li><a href="g05.html#p"  rel="author" title="patu">patu</a></li>
 	<!-- contact & copyleft -->
 	<li class="toggleblock">
-		<input type="checkbox" id="contact-cb" name="contact-cb">
+		<input type="checkbox" id="contact-cb" name="contact-cb" class="unsichtbar">
 		<label class="ib-label" for="contact-cb">Kontakt</label>
 		<label for="contact-cb" class="toggleitem centerblock">&nbsp;</label>
 		<div class="centeritem toggleitem">
