--- a/php/bestellg0.html
+++ b/php/bestellg0.html
@@ -9,10 +9,10 @@
 	  <input type="text" name="artikel[2]">
 	  <br><br>
 	  <input type="submit" value="Submit">
-	  <select>
-		  <option value="sel1">Ich bin Stammkunde</option>
-		  <option value="sel2">TV Werbung</option>
-		  <option value="sel3">Telefonbuch</option>
-		  <option value="sel4">Mundpropaganda</option>
+	  <select name="werbung">
+		  <option value="1">Ich bin Stammkunde</option>
+		  <option value="2">TV Werbung</option>
+		  <option value="3">Telefonbuch</option>
+		  <option value="4">Mundpropaganda</option>
 	  </select>
 </form> 
