wai-aria for better screenreader compatibility

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<li><a href="./shop/">Buchshop</a></li>
 		<li><a href="./shop/admin/">Verwaltung</a></li>
 		<li class="hover toggleblock">
-			<input id="exercises-cb" name="exercises-cb" type="checkbox" class="unsichtbar">
+			<input id="exercises-cb" name="exercises-cb" type="checkbox" aria-hidden="true" class="unsichtbar">
 			<label for="exercises-cb">&Uuml;bungen</label>
 			<ul class="toggleitem">
 				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub12/U1_tcpipftp_vw.pdf" title="Netzwerküberwachung und -analyse">1</a></li>
