--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@ Es wäre ja gelacht, wenn das nicht geht...
 </p>
 
 </aside>
+<aside class="boxshadow">
+	 <iframe src="login/login.html" width="200" height="400" name="login" style="border:0; overflow:hidden;" scrolling="no"> 
+		 <p>Ihr Browser kann leider keine eingebetteten Frames anzeigen: Sie können die eingebettete Seite über den folgenden Verweis aufrufen: <a href="http://wiki.selfhtml.org/wiki/Startseite">SELFHTML</a> </p>
+	</iframe>	
+</aside>
 
 </wrapper>
 
