link demo datei

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/U4_XML_vs.pdf" title="Übung zu XML">4</a></li>
 			</ul>
 		</li><!-- html secial character demo -->
+		<li><a href="./g05js.htm">Demo-Datei</a></li>
 	</ul>
 </nav>
 
