--- a/g05js.htm
+++ b/g05js.htm
@@ -53,8 +53,25 @@
 		Brutto gesamt: <input readonly="readonly" type="text" id="bgesamt" name="bgesamt"><br>
 </form> 
 	<script>
+	
+
+	function check(elm){
+			var intRegex = /^\d+$/;
+			var floatRegex = /^((\d+(\.\d *)?)|((\d*\.)?\d+))$/;
+
+			if(!(intRegex.test(elm.value) || floatRegex.test(elm.value))) {
+			   alert('Ungültige Eingabe');
+			   elm.value = "0";
+			}
+	
+	}
 	$(".rechner").change(
 		function(){
+		
+
+			
+			check($('#anzahl')[0]);
+			check($('#netto')[0]);
 			
 			$('#ngesamt')[0].value = $('#anzahl')[0].value * $('#netto')[0].value;
 			$('#bgesamt')[0].value = $('#ngesamt')[0].value * $('#mwst')[0].value;
