--- a/g05js.htm
+++ b/g05js.htm
@@ -46,8 +46,8 @@
 	<div>Ihre Festerauflösung innen: <script type="text/javascript">document.write(window.outerWidth + ' x ' +  window.outerHeight);</script></div>
 	<br>
 	<div> <form action="demo_form.asp">
-		Anzahl: <input class="rechner" type="text" name="anzahl" id="anzahl"><br>
-		Nettopreis: <input class="rechner" type="text" name="netto" id="netto"><br>
+		Anzahl: <input class="rechner" type="text" name="anzahl" id="anzahl" value="0"><br>
+		Nettopreis: <input class="rechner" type="text" name="netto" id="netto" value="0"><br>
 		Mwst: <input class="rechner" readonly="readonly" type="text" name="mwst" id="mwst" value="1.19">%<br>
 		Netto gesamt: <input readonly="readonly" type="text" name="ngesamt" id="ngesamt"><br>
 		Brutto gesamt: <input readonly="readonly" type="text" id="bgesamt" name="bgesamt"><br>
