Die Liste mit Übungen inkl. Lsg auf 12 erweitert.
Die Verlinkung zu richtigen Lösungen folgt.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html manifest="cache.appcache">
 <head>
 	<title>Spielwiese der Grp&nbsp;5</title>
@@ -34,12 +34,45 @@
 			<input id="exercises-cb" name="exercises-cb" type="checkbox" aria-hidden="true" class="unsichtbar">
 			<label for="exercises-cb">&Uuml;bungen</label>
 			<ul class="toggleitem">
-				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub12/U1_tcpipftp_vw.pdf" title="Netzwerküberwachung und -analyse">1</a></li>
-				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ewa12/UB_FTP_HTTP_SERVER_vu.pdf" title="Installation FTP-/HTTP-Server">2</a></li>
-				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/ewa_U3_HTML_vx1.pdf" title="Übung zu HTML & CSS">3</a></li>
-				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/U4_XML_vs.pdf" title="Übung zu XML">4</a></li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub12/U1_tcpipftp_vw.pdf" title="Netzwerküberwachung und -analyse">1</a>
+				- <a href="#" title="Lösung zu Übung 1">Lsg: 1</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ewa12/UB_FTP_HTTP_SERVER_vu.pdf" title="Installation FTP-/HTTP-Server">2</a>
+				- <a href="#" title="Lösung zu Übung 2">Lsg: 2</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/ewa_U3_HTML_vx1.pdf" title="Übung zu HTML & CSS">3</a>
+				- <a href="#" title="Lösung zu Übung 3">Lsg: 3</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/U4_XML_vs.pdf" title="Übung zu XML">4</a>
+				- <a href="#" title="Lösung zu Übung 4">Lsg: 4</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ewa_v50_webappseinf_vp1.pdf" title="Entw. von Webapplikationen">5</a>
+				- <a href="#" title="Lösung zu Übung 5">Lsg: 5</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/U5_php_vp1ok.pdf" title="Grundlagen der PHP-Programmierung">6</a>
+				- <a href="#" title="Lösung zu Übung 6">Lsg: 6</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/u6_DBmitPHP_vx.pdf" title="DB-Programmierung mit PHP">7</a>
+				- <a href="#" title="Lösung zu Übung 7">Lsg: 7</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/u7_PHPSessions_vx.pdf" title="Initiates file download">8</a>
+				- <a href="#" title="Lösung zu Übung 8">Lsg: 8</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/U8_javascript_vx.pdf" title="Übung zu JavaScript">9</a>
+				- <a href="#" title="Lösung zu Übung 9">Lsg: 9</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/U9b_JQuery_vx.pdf" title="Übung zu JQuery">10</a>
+				- <a href="#" title="Lösung zu Übung 10">Lsg: 10</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub12/u13_webservices_vu.pdf" title="Übung zu Web Services">11</a>
+				- <a href="#" title="Lösung zu Übung 11">Lsg: 11</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub12/U14_services_vt6.pdf" title="Übung zu SOA (mit Hinweis (neu))">12</a>
+				- <a href="#" title="Lösung zu Übung 12">Lsg: 12</a>
+				</li>
 			</ul>
 		</li><!-- html secial character demo -->
+		<li><a href="./login/login.html">Login</a></li>
 		<li><a href="./g05js.htm">Demo-Datei</a></li>
 	</ul>
 </nav>
@@ -88,11 +121,14 @@ Es wäre ja gelacht, wenn das nicht geht...
 </p>
 
 </aside>
+
+
 <aside class="boxshadow">
 	 <iframe src="login/login.html" width="200" height="400" name="login" style="border:0; overflow:hidden;" scrolling="no"> 
 		 <p>Ihr Browser kann leider keine eingebetteten Frames anzeigen: Sie können die eingebettete Seite über den folgenden Verweis aufrufen: <a href="http://wiki.selfhtml.org/wiki/Startseite">SELFHTML</a> </p>
 	</iframe>	
 </aside>
+
 
 </wrapper>
 
