Ein Titel korrigiert und Liste vervollständigt.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/u6_DBmitPHP_vx.pdf" title="DB-Programmierung mit PHP">7</a>
 				- <a href="#" title="Lösung zu Übung 7">Lsg: 7</a>
 				</li>
-				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/u7_PHPSessions_vx.pdf" title="Initiates file download">8</a>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/u7_PHPSessions_vx.pdf" title="PHP-Session-Management">8</a>
 				- <a href="#" title="Lösung zu Übung 8">Lsg: 8</a>
 				</li>
 				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/U8_javascript_vx.pdf" title="Übung zu JavaScript">9</a>
@@ -69,6 +69,12 @@
 				</li>
 				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub12/U14_services_vt6.pdf" title="Übung zu SOA (mit Hinweis (neu))">12</a>
 				- <a href="#" title="Lösung zu Übung 12">Lsg: 12</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub12/U12_typo3_vt.pdf" title="Übung zu CMS am Beispiel von TYPO3">13</a>
+				- <a href="#" title="Lösung zu Übung 13">Lsg: 13</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ewa12/ewa2012_PR_Usability-Barrierefreiheit.pdf" title="Praktikum Usability und Barrierefreiheit">14</a>
+				- <a href="#" title="Lösung zu Übung 14">Lsg: 14</a>
 				</li>
 			</ul>
 		</li><!-- html secial character demo -->
