fix width for aside

--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@ Es wäre ja gelacht, wenn das nicht geht...
 
 <aside class="boxshadow">
 
+
+<!--</aside>
+
+
+<aside class="boxshadow">-->
+
 <p>
 	In Anlehnung an u.a.
 	<a href="http://wiki.selfhtml.org/extensions/Selfhtml/example.php/Beispiel:CSS3_Flexbox-5.html" rel="help">SelfHTML</a>,
@@ -126,10 +132,6 @@ Es wäre ja gelacht, wenn das nicht geht...
 	.
 </p>
 
-</aside>
-
-
-<aside class="boxshadow">
 	 <iframe src="login/login.html" width="200" height="400" name="login" style="border:0; overflow:hidden;" scrolling="no"> 
 		 <p>Ihr Browser kann leider keine eingebetteten Frames anzeigen: Sie können die eingebettete Seite über den folgenden Verweis aufrufen: <a href="http://wiki.selfhtml.org/wiki/Startseite">SELFHTML</a> </p>
 	</iframe>	
