--- a/login/login.html
+++ b/login/login.html
@@ -5,7 +5,7 @@ label {
 	width: 16ex;
 }
 input[type="text"],input[type="password"] {
-	
+	max-width: 150px;
 }
 input[type="submit"] {
 	border-radius: 0.5ex;
@@ -14,6 +14,7 @@ input[type="submit"] {
 </style>
 </head><body>
 
+<div style="width: 195px;">
 <form action="login.php" method="post">
 	<label for="username">Dein Username</label>
 	<input type="text" size="24" maxlength="50"
@@ -25,5 +26,7 @@ input[type="submit"] {
 
 	<input type="submit" value="Login">
 </form>
+
+</div>
 
 </body></html>
