--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="cache.appcache">
+<html manifest="cache.appcache" lang="de-de">
 <head>
 	<title>Spielwiese der Grp&nbsp;5</title>
 	<meta charset="utf-8">
@@ -132,7 +132,7 @@ Es wäre ja gelacht, wenn das nicht geht...
 	.
 </p>
 
-	 <iframe src="login/login.html" width="200" height="400" name="login" style="border:0; overflow:hidden;" scrolling="no"> 
+	 <iframe src="login/login.html" width="180" height="400" name="login" style="border:0; overflow:hidden;" scrolling="no"> 
 		 <p>Ihr Browser kann leider keine eingebetteten Frames anzeigen: Sie können die eingebettete Seite über den folgenden Verweis aufrufen: <a href="http://wiki.selfhtml.org/wiki/Startseite">SELFHTML</a> </p>
 	</iframe>	
 </aside>
@@ -160,6 +160,7 @@ Es wäre ja gelacht, wenn das nicht geht...
 		</div>
 	</li>
 	<li><a href="https://creativecommons.org/licenses/by/3.0/" title="Copyleft" rel="license">CC-BY&nbsp;3.0</a></li>
+	<li><a href="http://wave.webaim.org/report#/ivm108.informatik.htw-dresden.de/ewa/g05/">UX-Test</a></li>
 	<!-- <li><a href="about/jslicenses.html" rel="jslicense">JS&nbsp;Lizenzen</a></li><!-- documenting licenses when using javascript -->
 </ul>
 
