aktuelle Version von dem Server
aktuelle Version von dem Server mit Überungsaufgaben

--- a/index.html
+++ b/index.html
@@ -80,6 +80,31 @@
 		</li><!-- html secial character demo -->
 		<li><a href="./login/login.html">Login</a></li>
 		<li><a href="./g05js.htm">Demo-Datei</a></li>
+		<li class="hover toggleblock">
+			<input id="abnahme" name="abnahme" type="checkbox" aria-hidden="true" class="unsichtbar">
+			<label for="abnahme">Abnahme</label>
+			<ul class="toggleitem">
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="Website Buchgeschäft">1</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="Servergrundinstallation">2</a>
+				- <a href="http://141.56.131.108/ewa/g05/conf" title="Lösung zu Aufgabe 2b">conf</a> - <a href="http://141.56.131.108/ewa/g05/admin/" title="Lösung zu Aufgabe 2c">admin</a> - <a href="http://141.56.131.108/ewa/g05/datenadm/datendemo.txt" title="Lösung zu Aufgabe 2d">datendemo.txt</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="XML-Aufgabe">3</a>
+				- <a href="http://141.56.131.108/ewa/g05/xml/book.xml" title="Lösung zu XML-Aufgabe">XML inkl. DTD</a> - <a href="http://141.56.131.108/ewa/g05/xml/xml.php" title="Lösung zu XML-Aufgabe">XML Reader</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="PHP–Aufgaben">4</a>
+				- <a href="http://141.56.131.108/ewa/g05/shop/suche.php" title="Lösung zu Aufgabe 4a">Suchmaske</a> - <a href="http://141.56.131.108/ewa/g05/login/eintragen.html" title="Lösung zu Aufgabe 4b">Registrierung</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="Javascript und RIA">5</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="Webservice">6</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="SOA">7</a>
+				</li>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="Wordpress">8</a> - <a href="http://ivm108.informatik.htw-dresden.de/ewa/G05/wordpress/" target="_blank" title="Webseite Wordpress">Webseite</a>
+				</li>
+			</ul>
+			</li><!-- html secial character demo -->
 	</ul>
 </nav>
 
@@ -160,7 +185,7 @@ Es wäre ja gelacht, wenn das nicht geht...
 		</div>
 	</li>
 	<li><a href="https://creativecommons.org/licenses/by/3.0/" title="Copyleft" rel="license">CC-BY&nbsp;3.0</a></li>
-	<li><a href="http://wave.webaim.org/report#/ivm108.informatik.htw-dresden.de/ewa/g05/">UX-Test</a></li>
+	<li><a href="http://wave.webaim.org/report#http://ivm108.informatik.htw-dresden.de/ewa/g05/">UX-Test</a></li>
 	<!-- <li><a href="about/jslicenses.html" rel="jslicense">JS&nbsp;Lizenzen</a></li><!-- documenting licenses when using javascript -->
 </ul>
 
