adding link to talk

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 
 <section class="boxshadow">
 
+Auch interessant: <a href="http://idlewords.com/talks/website_obesity.htm">Performantere Seiten, wo gibt es das?</a>
+
 <figure id="wiedemann-foto-figure" class="boxshadow">
 	<picture title="Foto von Prof. Dr.-Ing. Thomas Wiedemann">
 		<!--
