styling login/reistrieren

--- a/login/eintragen.html
+++ b/login/eintragen.html
@@ -1,41 +1,43 @@
 <!doctype html><html><head><title>Bookshop - Login</title><meta charset="UTF-8">
+	<link rel="stylesheet" href="../css/style.css">
 <style>
 label {
-	display: inline-block;
-	width: 23ex;
+	display: inline-block !important;
+	width: 20ex !important;
 }
 input[type="text"],input[type="password"] {
 	
 }
 input[type="submit"] {
-	border-radius: 0.5ex;
-	margin: 0.3ex;	
+	border-radius: 0.5ex !important;
+	margin: 0.3ex !important;
 }
 </style>
 </head><body>
+<div><h2>Registrieren</h2>
 
 <form action="eintragen.php" method="post">
 	<label for="username">Dein Username</label>
-	<input type="text" size="24" maxlength="50"
+	<input type="text" size="14" maxlength="50"
 	name="username" id="username"><br>
 
 	<label for="password">Dein Passwort</label>
-	<input type="password" size="24" maxlength="50"
+	<input type="password" size="14" maxlength="50"
 	name="password" id="password"><br>
 
-	<label for="password2">Passwort wiederholen</label>
-	<input type="password" size="24" maxlength="50"
+	<label for="password2">Pwt. wiederholen</label>
+	<input type="password" size="14" maxlength="50"
 	name="password2" id="password2"><br>
 	
 	<label for="name">Name</label>
-	<input type="text" size="24" maxlength="50"
+	<input type="text" size="14" maxlength="50"
 	name="name" id="name"><br>
 	
 	<label for="address">Adresse</label>
-	<input type="text" size="24" maxlength="50"
+	<input type="text" size="14" maxlength="50"
 	name="address" id="address"><br>
 
 	<input type="submit" value="Abschicken">
 </form>
-
+</div>
 </body></html>
