adding things done: hashing

--- a/index.html
+++ b/index.html
@@ -136,7 +136,19 @@ Es wäre ja gelacht, wenn das nicht geht...
 <p>
 ...dauert eben manchmal nur bis man es auch versteht.
 </p>
-
+<h3>Wir haben noch ein wenig mehr gemacht</h3>
+<p>
+	<ol>
+	<li>Webfonts</li>
+	<li>Kompatibilität: CSS statt JavaScript für Ein-/Ausblendefunktionen</li>
+	<li>Picture-Umgebung</li>
+	<li>Barrierefreiheit mit ARIA</li>
+	<li>performanteres inline-img (SVG) im CSS</li>
+	<li>Hashing skalierbar mit Runden und austauschbarem Algorythmus</li>
+	<li>photos.txt, humans.txt (statt nur robots.txt)</li>
+	<li>Seite validiert beim W3C ohne Warnung und Fehler</li>
+	</ol>
+</p>
 
 </section>
 
@@ -158,7 +170,7 @@ Es wäre ja gelacht, wenn das nicht geht...
 	.
 </p>
 
-	 <iframe src="login/login.html" width="180" height="400" name="login" id="loginframe"> 
+	 <iframe src="login/login.html" name="login" id="loginframe"> 
 		 <p>Ihr Browser kann leider keine eingebetteten Frames anzeigen: Sie können die eingebettete Seite über den folgenden Verweis aufrufen: <a href="http://wiki.selfhtml.org/wiki/Startseite">SELFHTML</a> </p>
 	</iframe>	
 </aside>
