--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@ Es wäre ja gelacht, wenn das nicht geht...
 <p>
 	<ol>
 	<li>Webfonts</li>
-	<li>Kompatibilität: CSS statt JavaScript für Ein-/Ausblendefunktionen</li>
-	<li>Picture-Umgebung</li>
-	<li>Barrierefreiheit mit ARIA</li>
+	<li>Picture/Source-Umgebung (Bild-Quelle abhängig von Bildschirm)</li>
 	<li>performanteres inline-img (SVG) im CSS</li>
 	<li>Hashing skalierbar mit Runden und austauschbarem Algorythmus</li>
+	<li>Kompatibilität: CSS statt JavaScript für Ein-/Ausblendefunktionen</li>
+	<li>Barrierefreiheit mit ARIA (Screenreader-Kompatibilität)</li>
 	<li>photos.txt, humans.txt (statt nur robots.txt)</li>
 	<li>Seite validiert beim W3C ohne Warnung und Fehler</li>
 	</ol>
