--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@ Es wäre ja gelacht, wenn das nicht geht...
 <h3>Wir haben noch ein wenig mehr gemacht</h3>
 <p>
 	<ol>
-	<li>Webfonts</li>
+	<li>Webfonts (um zu zeigen das man das nicht immer will)</li>
+	<li>performanteres inline-img (SVG) im CSS statt Webfonts</li>
 	<li>Picture/Source-Umgebung (Bild-Quelle abhängig von Bildschirm)</li>
-	<li>performanteres inline-img (SVG) im CSS</li>
 	<li>Hashing skalierbar mit Runden und austauschbarem Algorythmus</li>
 	<li>Kompatibilität: CSS statt JavaScript für Ein-/Ausblendefunktionen</li>
 	<li>Barrierefreiheit mit ARIA (Screenreader-Kompatibilität)</li>
