layouting, klick-buchshop vorbereiten

--- a/login/eintragen.html
+++ b/login/eintragen.html
@@ -14,7 +14,7 @@ input[type="submit"] {
 }
 </style>
 </head><body>
-<div><h2>Registrieren</h2>
+<div><h3>Registrieren</h3>
 
 <form action="eintragen.php" method="post">
 	<label for="username">Dein Username</label>
@@ -39,5 +39,6 @@ input[type="submit"] {
 
 	<input type="submit" value="Abschicken">
 </form>
+<small><a href="login.html">Login</a></small>
 </div>
 </body></html>
