--- a/login/eintragen.html
+++ b/login/eintragen.html
@@ -14,9 +14,10 @@ input[type="submit"] {
 }
 </style>
 </head><body>
-<div><h3>Registrieren</h3>
+<div>
+<fieldset form="reg-form"><legend>Registrieren</legend>
 
-<form action="eintragen.php" method="post">
+<form name="reg-form" id="reg-form" action="eintragen.php" method="post">
 	<label for="username">Dein Username</label>
 	<input type="text" size="14" maxlength="50"
 	name="username" id="username"><br>
@@ -39,6 +40,7 @@ input[type="submit"] {
 
 	<input type="submit" value="Abschicken">
 </form>
-<small><a href="login.html">Login</a></small>
+</fieldset>
+<small style="margin-left: 3em;"><a href="login.html">Login</a></small>
 </div>
 </body></html>
