--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 	<title>Spielwiese der Grp&nbsp;5</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel=icon href="img/favicon.ico" sizes="32x32 48x48" type="image/vnd.microsoft.icon">
 <!-- external link that has been used to obtain the free webfont
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 -->
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link type="text/plain" rel="author" href="./humans.txt">
-	<link type="text/plain" rel="license" href="./photos.txt">
-	<!--link type="text/plain" rel="robots" href="./robots.txt"-->
+	<link type="text/plain" rel="images" href="./photos.txt">
+	<link type="text/plain" rel="robots" href="./robots.txt">
 	<meta name="robots" content="index,follow">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
 </head><body>
@@ -23,11 +22,11 @@
 	</h1>
 </header>
 
-<div id="wrapper">
+<wrapper>
 
 <nav class="boxshadow">
-	<h2>Inhalte</h2>
 	<ul>
+		<h3>Inhalte</h3>
 		<li><a href="./about/">EwA G05</a></li>
 		<li><a href="./shop/">Buchshop</a></li>
 		<li><a href="./shop/admin/">Verwaltung</a></li>
@@ -82,43 +81,49 @@
 		<li><a href="./login/login.html">Login</a></li>
 		<li><a href="./g05js.htm">Demo-Datei</a></li>
 		<li class="hover toggleblock">
-			<input id="abnahme-cb" name="abnahme-cb" type="checkbox" aria-hidden="true" class="unsichtbar">
-			<label for="abnahme-cb">Abnahme</label>
+			<input id="abnahme" name="abnahme" type="checkbox" aria-hidden="true" class="unsichtbar">
+			<label for="abnahme">Abnahme</label>
 			<ul class="toggleitem">
-				<li><a href="daten/checkliste-v1.pdf" title="Website Buchgeschäft">1</a> - <a href="./">a</a> - <span class="strike" title="kein Teil der Übungen">b</span> - <a href="">c</a> - <a href="">d</a>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="Website Buchgeschäft">1</a>
+				- <a href="http://141.56.131.108/ewa/g05/index.html" title="Lösung zu Aufgabe 1">Startseite</a>
 				</li>
-				<li><a href="daten/checkliste-v1.pdf" title="Servergrundinstallation">2</a>
-				- <a href="http://141.56.131.108/ewa/g05/conf" title="Lösung zu Aufgabe 2b">conf</a> - <a href="http://141.56.131.108/ewa/g05/admin/" title="Lösung zu Aufgabe 2c">admin</a> - <a href="http://141.56.131.108/ewa/g05/datenadm/datendemo.txt" title="Lösung zu Aufgabe 2d">datendemo.txt</a>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="Servergrundinstallation">2</a>
+				- <a href="http://141.56.131.108/ewa/g05/conf" title="Lösung zu Aufgabe 2b">conf</a> - <a href="http://141.56.131.108/ewa/g05/admin/" title="Lösung zu Aufgabe 2c">admin</a>
+				- <a href="http://141.56.131.108/ewa/g05/datenadm/datendemo.txt" title="Lösung zu Aufgabe 2d">datendemo.txt</a>
 				</li>
-				<li><a href="daten/checkliste-v1.pdf" title="XML-Aufgabe">3</a>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="XML-Aufgabe">3</a>
 				- <a href="http://141.56.131.108/ewa/g05/xml/book.xml" title="Lösung zu XML-Aufgabe">XML inkl. DTD</a> - <a href="http://141.56.131.108/ewa/g05/xml/xml.php" title="Lösung zu XML-Aufgabe">XML Reader</a>
 				</li>
-				<li><a href="daten/checkliste-v1.pdf" title="PHP–Aufgaben">4</a>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="PHP–Aufgaben">4</a>
 				- <a href="http://141.56.131.108/ewa/g05/shop/suche.php" title="Lösung zu Aufgabe 4a">Suchmaske</a> - <a href="http://141.56.131.108/ewa/g05/login/eintragen.html" title="Lösung zu Aufgabe 4b">Registrierung</a>
 				</li>
-				<li><a href="daten/checkliste-v1.pdf" title="Javascript und RIA">5</a>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="Javascript und RIA">5</a>
+				- <a href="#" title="Lösung zu Aufgabe 5a">Bestelldaten</a> - <a href="#" title="Lösung zu Aufgabe 5b">Kataloglistenanzeige</a>
 				</li>
-				<li><a href="daten/checkliste-v1.pdf" title="Webservice">6</a>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="Webservice">6</a>
+				- <a href="#" title="Lösung zu Aufgabe 6a">Kreditkartententest</a> - <a href="#" title="Lösung zu Aufgabe 6b">Kreditkartencheck</a> - <a href="#" title="Lösung zu Aufgabe 6c">Bankleitzahlendatenermittlung</a>
 				</li>
-				<li><a href="daten/checkliste-v1.pdf" title="SOA">7</a>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="SOA">7</a>
+				- <a href="#" title="Lösung zu Aufgabe 7a">Fehlende Bücher</a> - <a href="#" title="Lösung zu Aufgabe 7b">Versandabwicklung</a>
 				</li>
-				<li><a href="daten/checkliste-v1.pdf" title="Wordpress">8</a> - <a href="http://ivm108.informatik.htw-dresden.de/ewa/G05/wordpress/" target="_blank" title="Webseite Wordpress">Webseite</a>
+				<li><a href="http://iasp2.informatik.htw-dresden.de/wiedem/fileadmin/Lehre/ewa/ub/Checkliste___Ewa_ws201516_v1.pdf" title="Wordpress">8</a>
+				- <a href="#" title="Lösung zu Aufgabe 8">Wordpress Installation</a>
 				</li>
 			</ul>
 			</li><!-- html secial character demo -->
 	</ul>
 </nav>
 
-<section class="boxshadow"><h2>Demo f. Entw. Web-Applikationen</h2>
-
-Auch interessant: <a href="http://idlewords.com/talks/website_obesity.htm">Performantere Seiten, wo gibt es das?</a>
+<section class="boxshadow">
 
 <figure id="wiedemann-foto-figure" class="boxshadow">
 	<picture title="Foto von Prof. Dr.-Ing. Thomas Wiedemann">
-		<source media="(min-width: 64em)" srcset="img/high-res.jpg" type="image/jpeg">
-		<source media="(min-width: 37.5em)" srcset="img/med-res.jpg" type="image/jpeg">
-		<source srcset="img/low-res.jpg" type="image/jpeg">
-		<img src="img/med-res.jpg"  srcset="img/high-res.jpg" alt="für alte Browser"><!-- fallback -->
+		<!--
+		<source media="(min-width: 64em)" src="img/high-res.jpg">
+		<source media="(min-width: 37.5em)" src="img/med-res.jpg">
+		<source src="img/low-res.jpg">
+		-->
+		<img src="http://iasp2.informatik.htw-dresden.de/wiedem/imgw/wiedem_Foto2009_200.jpg" alt="für alte Browser"><!-- fallback -->
 	</picture>
 	<figcaption>
 		Unser Prof
@@ -136,19 +141,7 @@ Es wäre ja gelacht, wenn das nicht geht...
 <p>
 ...dauert eben manchmal nur bis man es auch versteht.
 </p>
-<h3>Wir haben noch ein wenig mehr gemacht</h3>
-<p>
-	<ol>
-	<li>Webfonts (um zu zeigen das man das nicht immer will)</li>
-	<li>performanteres inline-img (SVG) im CSS statt Webfonts</li>
-	<li>Picture/Source-Umgebung (Bild-Quelle abhängig von Bildschirm)</li>
-	<li>Hashing skalierbar mit Runden und austauschbarem Algorythmus</li>
-	<li>Kompatibilität: CSS statt JavaScript für Ein-/Ausblendefunktionen</li>
-	<li>Barrierefreiheit mit ARIA (Screenreader-Kompatibilität)</li>
-	<li>photos.txt, humans.txt (statt nur robots.txt)</li>
-	<li>Seite validiert beim W3C ohne Warnung und Fehler</li>
-	</ol>
-</p>
+
 
 </section>
 
@@ -156,8 +149,6 @@ Es wäre ja gelacht, wenn das nicht geht...
 
 
 <!--</aside>
-
-
 <aside class="boxshadow">-->
 
 <p>
@@ -170,13 +161,13 @@ Es wäre ja gelacht, wenn das nicht geht...
 	.
 </p>
 
-	 <iframe src="login/login.html" name="login" id="loginframe"> 
+	 <iframe src="login/login.html" width="180" height="400" name="login" style="border:0; overflow:hidden;" scrolling="no"> 
 		 <p>Ihr Browser kann leider keine eingebetteten Frames anzeigen: Sie können die eingebettete Seite über den folgenden Verweis aufrufen: <a href="http://wiki.selfhtml.org/wiki/Startseite">SELFHTML</a> </p>
 	</iframe>	
 </aside>
 
 
-</div><!-- /wrapper -->
+</wrapper>
 
 <footer class="boxshadow">
 
@@ -194,13 +185,12 @@ Es wäre ja gelacht, wenn das nicht geht...
 			<h3>Kontakt</h3>
 			<p>Wir sind nach Stundenplan des Kurses im Rechner-Labor anzutreffen.</p>
 		
-			<div class="close"><label class="ib-label" for="contact-cb">Schließen</label></div>
+			<div class="close"><label class="ib-label" for="contact-cb">Schließen</label></a></div>
 		</div>
 	</li>
 	<li><a href="https://creativecommons.org/licenses/by/3.0/" title="Copyleft" rel="license">CC-BY&nbsp;3.0</a></li>
-	<li><a href="http://wave.webaim.org/report#http://ivm108.informatik.htw-dresden.de/ewa/g05/">UX-Test</a></li>
-	<li><a href="https://validator.w3.org/nu/?useragent=Validator.nu%2FLV+http%3A%2F%2Fvalidator.w3.org%2Fservices&doc=http%3A%2F%2Fivm108.informatik.htw-dresden.de%2Fewa%2Fg05%2F">Validate</a></li>
-	<!--li><a href="about/jslicenses.html" rel="jslicense">JS&nbsp;Lizenzen</a></li--><!-- documenting licenses when using javascript -->
+	<li><a href="http://wave.webaim.org/report#/ivm108.informatik.htw-dresden.de/ewa/g05/">UX-Test</a></li>
+	<!-- <li><a href="about/jslicenses.html" rel="jslicense">JS&nbsp;Lizenzen</a></li><!-- documenting licenses when using javascript -->
 </ul>
 
 </footer>
