erwähnen der lösungen

--- a/shop/idee.html
+++ b/shop/idee.html
@@ -11,13 +11,14 @@
 	<li><a href="itemview.html" title="view">item view</a></li>
 </ul>
 
-<h3>Umsetzungen</h3>
+<h3><a href="./">Umsetzungen</a></h3>
 <ul>
-	<li> </li>
-	<li> </li>
-	<li> </li>
-	<li> </li>
-	<li> </li>
+	<li>ergebisse </li>
+	<li>suche </li>
+	<li>random </li>
+	<li>uebersicht </li>
+	<li>details </li>
+	<li>bezahlen </li>
 </ul>
 </body>
 </html>
