fix charset=utf8 + adding link to librejs

--- a/about/jslicenses.html
+++ b/about/jslicenses.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html>
 <head><title>JavaScript Lzenzen</title></head>
+<meta charset="utf-8">
 <body>
 
 <h1>Beispiel für Lizensangabe zu JavaScript auf der Website</h1>
+<p>Mehr bei <a href="https://www.gnu.org/software/librejs/">LibreJS</a>.</p>
 <!-- -->
 <table id="jslicense-labels1">
     <tr>
